; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdac_bus.c_snd_hdac_bus_exec_verb.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdac_bus.c_snd_hdac_bus_exec_verb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_bus = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_hdac_bus_exec_verb(%struct.hdac_bus* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.hdac_bus*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.hdac_bus* %0, %struct.hdac_bus** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.hdac_bus*, %struct.hdac_bus** %5, align 8
  %11 = getelementptr inbounds %struct.hdac_bus, %struct.hdac_bus* %10, i32 0, i32 0
  %12 = call i32 @mutex_lock(i32* %11)
  %13 = load %struct.hdac_bus*, %struct.hdac_bus** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @snd_hdac_bus_exec_verb_unlocked(%struct.hdac_bus* %13, i32 %14, i32 %15, i32* %16)
  store i32 %17, i32* %9, align 4
  %18 = load %struct.hdac_bus*, %struct.hdac_bus** %5, align 8
  %19 = getelementptr inbounds %struct.hdac_bus, %struct.hdac_bus* %18, i32 0, i32 0
  %20 = call i32 @mutex_unlock(i32* %19)
  %21 = load i32, i32* %9, align 4
  ret i32 %21
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @snd_hdac_bus_exec_verb_unlocked(%struct.hdac_bus*, i32, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
